# meter_monitor_project

./: 00_report.docx  docker-compose.yml  flow.pptx  mongo-init.js  ~$_report.docx  ~$flow.pptx
RPI_module/: .pdm.toml  index.py  pyproject.toml  test_time.py  upload_image.py  write_image.py
meter_monitor_backend/: .env  Dockerfile  app.js  app2.js  backup  debugEnv.txt  docker-compose.yml  index.js  package-lock.json  package.json  testDate.js
meter_monitor_backend/connection/: connection.js
meter_monitor_backend/middleware/: auth.js  uploadMiddleware.js
meter_monitor_backend/model/: meterImage.js  queryGroupByZone.js  userprofile.js
meter_monitor_backend/modules/: callback_example.js  image-to-base64.js  main.js  test.html  uploadMiddleware.js
meter_monitor_frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
meter_monitor_frontend/src/: App.vue  main.js  store.js
meter_monitor_frontend/src/components/: ImageVerify.vue  RegisterPages.vue
meter_monitor_frontend/src/components/footer/: Footer.vue
meter_monitor_frontend/src/components/header/: Header.vue
meter_monitor_frontend/src/components/icons/: IconMenu.vue
meter_monitor_frontend/src/components/modal/: Modal.vue
meter_monitor_frontend/src/router/: index.js
meter_monitor_frontend/src/views/: UpdateProfile.vue
mongo_seed/: Dockerfile  import.sh
mongo_seed/mock_data/: images.json  users.json
nginx/: Dockerfile
nginx/conf/: nginx.conf
nginx/conf.d/: default.conf
qr_code_generator/: index.html
