[project]
name = ""
version = ""
description = ""
authors = [
    {name = "“midoriyaShonen441”", email = "khunnatta@gmail.com"},
]
dependencies = [
    "numpy>=1.23.2",
    "opencv-python>=4.6.0.66",
    "flask>=2.2.2",
    "requests>=2.28.1",
    "aiohttp>=3.8.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "python index.py"
